# daily-news-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-news.yml
config/: feeds.json
reports/: 2026-06-15.md
reports/email/: 2026-07-10.html  2026-07-10.txt
reports/en/: 2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
reports/ja/: 2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
reports/zh/: 2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  (+1 more)
tests/: test_email_render.py  test_mail.py  test_render.py
(+9 files in other folders)
