[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-news-agent"
version = "0.1.0"
description = "A scheduled RSS news digest agent with optional OpenAI summaries."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "feedparser>=6.0.11",
  "openai>=1.0.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
daily-news-agent = "news_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
